@@ -7,9 +7,7 @@ Things still needing to be done for the ALPHA release (on experimental livecd):
 	Backend:
 		Make sure partitioning somewhat works. (agaffney)
 		rewrite install_filesystem_tools()
-		add coldplug and hotplug when doing genkernel
-		setting services does not work.  none of them set.
-		DHCP client-controller side doesn't work.
+		DHCP client-controller side doesn't work. (kindof fixed?)
 	DialogFE:
 		update partitioning stuff (agaffney) (sorry)
 		where does hostname get set?
@@ -48,3 +46,4 @@ so 'PORTAGE_TMPDIR="/mnt/gentoo/var/tmp"
 Add networking setup for CC (samyron!)
 dialog progres bar (codeman)
 Progress bar. (agaffney)
+services step.add coldplug and hotplug when doing genkernel. (codeman)
