@@ -1,8 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.79 2005/03/14 22:19:45 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.80 2005/03/16 06:17:34 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  16 Mar 2005; Preston Cody <codeman@gentoo.org>
+  Removed default values for stage tarball URI and portage tree URI from
+  InstallProfile.  These should be set by the FEs.  also added services step to
+  ArchTemplate and coldplug/hotplug runlevels to the genkernel step.
+  Possibly fixed CC DHCP bug with -n. (thx agaffney)
 
   14 Mar 2005; Preston Cody <codeman@gentoo.org>
   Small fix for setting the default gateway.  Also added feature to dialogfe.
